updated expertise.html content, site head, jumbotron, footer. Updated about.html navbar and content. Removed from index.html

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
-            <a class="nav-link" href="index.html#about">Expertise</a>
+            <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
 
           <li class="nav-item active">
@@ -88,7 +88,7 @@
                 <h2>Ready to get in touch?</h2><br>
                 <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
             </div>
-            
+
         </main> 
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
