Updates to navbar - removed commented out form code; removed commented out CSS from style.css; transferred case studies to sep. page;

--- a/case-studies.html
+++ b/case-studies.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
@@ -17,68 +17,218 @@
 </header>
 
 <body>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="expertise.html">Expertise</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+            <li class="nav-item active">
+            <a class="nav-link" href="case-studies.html">Case studies</a>
+          </li>
+           </li>
+            <li class="nav-item">
+            <a class="nav-link" href="previous-clients.html">Previous clients</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#contact">Contact</a>
+          </li>
+              </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
+          <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
+        </ul>
+      </div>
+    </nav>
+
+  <main>
+            
+
+    <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+             Case study &ndash; infrastructure/local government engagement review
+            </button>
+          </h2>
+        </div>
+
+
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+
+                <a href="https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component">
+                    <img class="card-img-top" src="img/gateway.jpg" alt="gateway highway">
+                </a>
+
+                <p class="text-muted">Gateway Vision WA. Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </p>
+
+                <p> In 2006, Dr Helen Grzyb was part of the original Main Roads WA (MRWA) Value Assurance Review team which tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited MRWA VAR Reviewer. Subsequently Helen went on to undertake a further five reviews for MRWA projects:</p>
+
+                <ul>
+                    <li>Albany Ring Road project</li>
+                    <li>City East Alliance project</li>
+                    <li>Gateway Vision project</li>
+                    <li>Mitchell Freeway Extension project</li>
+                </ul>
+
+                <p>Helen is very experienced in undertaking independent reviews including with diverse frameworks and standards. She has developed enhancements to increase outcomes from the review process/result including coaching project staff to increase project engagement expertise.</p>
+
+                <p>As a highly experienced VAR reviewer Helen has utilised the MRWA framework and has adapted review techniques to extend and improve the framework to include:</p>
+
+                <ul>
+                    <li>Real time evaluation</li>
+                    <li>Independent review statement as part of the project business case</li>
+                </ul>
+
+                <p>Helen has since been sought after to undertake stakeholder enagement reviews in the City of Melville and in 2019 for the City of Nedlands.</p>
+                <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img src="img/Shirely-Strickland-Reserve.jpg"></a>
+                <h6 class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</h6>
+             </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Cossack 2006-7 &ndash; stakeholder engagement</button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+              <img class="card-img-top" src="img/cossack_house.jpg">
+              <div class="text-muted">Customs House & Bond Store, Cossack. Image source: Michal Lewi - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43737833</div>
+
+                    <h5 class="card-title">Cossack 2006-7 – stakeholder engagement</h5>
+                    <h6>Project Background</h6>
+
+                    <p>Established in 1863 at the mouth of the Harding River near Roebourne. Cossack was once a thriving community servicing the pastoral and pearling industries.</p>
+
+                    <p>Originally known as Tien Tsin harbour, the name was changed in 1871 to Cossack in honour of the ship that carried the Western Australian Governor Sir Frederick Weld to the area. Pearl divers from Japan, the Philippines and Malaysia were first attracted to the area in 1866 and by the 1870s more than 80 boats were operating out of the port.</p>
+
+                    <p>The townsite was officially declared in 1872. Such was its commercial importance that by 1887 a horse drawn tramway connected Cossack port with the township of Roebourne. The town was abandoned after World War II following unsuccessful attempts to resuscitate the local pearling industry.</p>
+
+                    <p>For decades the heritage buildings deteriorated into ruins until new funding permitted restoration work to be undertaken. This funding was sourced from the Heritage Council and supported by funds from the Shire of Roebourne. Connection to power, water and sewerage has been delayed due to lack of a clear future for the site. Tourist operators had gone out of business in the meantime.</p>
+
+                    <p>With the pressure for increased housing in Karratha, a project was commissioned by the Department of Housing and Works, the Heritage Council of WA and the Shire of Roebourne.</p>
+
+                    <p><strong>Project Objective</strong>: To develop the best way forward for Cossack including consideration of ways to optimise opportunities for housing.</p>
+
+                    <p><strong>Goal for Helen Grzyb and Associates:</strong></p>
+                    <p>Palassis Architects engaged Helen Grzyb and Associates to engage with the community and with stakeholders for their input into a masterplan.</p>
+
+                    <img alt="Cossack masterplan document" class="card-image" src="img/cossackmasterplan.jpg">
+                    <h6 class="text-muted">: Cossack Master Plan. Image source: Palassis Architects.</h6>
+
+                    <p>Our team members were Dr Grzyb, Shontay Cardew, Mary Power. We identified the key audiences including private landowners; ratepayers (currently partly funding the restoration work), archaeological, heritage, and indigenous groups, as well as federal, state and local governments.</p>
+
+                    <p>A consultation plan was developed, including six focus groups which were held in Cossack, Roebourne, Karratha, and in Perth.</p>
+
+                    <p>There was general concurrence about heritage, environmental and climate constraints on increasing buildings at the site.</p>
+
+                    <p>A draft masterplan was developed and released for comment late in 2006. Further feedback was sought from stakeholders and these comments informed the development of a masterplan which was presented to the Minister for Housing for his consideration.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card"> 
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                 Fremantle Heritage Precinct Master Plan
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                    <p>Fremantle Prison Heritage Precinct is one of the most significant heritage sites in Australia.</p>
+
+                    <p>The development of the Fremantle Prison Heritage Precinct Master Plan presented many exciting opportunities to create an exceptional and viable experience. The success of the Fremantle Prison as a unique heritage precinct is to a large degree reliant on capturing the attention and imagination of visitors. The opportunity now exist to emphasise its connection with the port and city of Fremantle and to provide economically viable and compatible utilisation of the buildings and spaces which make up the precinct.</p>
+
+                    <p>The project was to develop a Master Plan which created a vision for the future, firmly anchored in the past, with practical implementation strategies for the present. Palassis Architects were appointed as the project leaders, with international expertise from tourism, heritage,and marketing included in the multi-disciplinary project team including Helen Grzyb and Associates.</p>
+
+                    <p>Our engagement team members Dr Grzyb, Amy Lomas, Mary Power, and JohnMichael Swinbank, brought collective expertise in managing multiple stakeholders, for example managing situations where stakeholders may have aggressively pursued special interests.</p>
+
+                    <p>We developed an optimum two stage engagement strategy that involved local and government stakeholders in developing a way forward for the Prison.</p>
+
+                    <p>The Master Plan was subsequently adopted by government and implemented, resulting in the dynamic organisation we see today.</p>
+               </div>
+            </div>
+          </div>
+
+            <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                  
+                    <p>In 2012, Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
+
+                    <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
+
+                    <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.<br>
+
+                    <p>Reflecting the changing environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>          
+                </div>
+            </div>
+          </div>
+        </div>
+
+            <div id="news" class="cushycms">
+                <h3>News</h3>
+
+                <h5 class="date">February 14, 2020</h5>
+                <h4>Workshops at As We Are</h4>
+                <ul>
+                    <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulson Group.</li>
+                </ul>
+                <h5 class="date">July 3, 2019</h5>
+                <h4>New board role</h4>
+                <ul>
+                    <li>Governing Council Member for South Regional TAFE</li>
+                </ul>
+                <h4>Current panel contracts</h4>
+                <ul>
+                    <li>Approved provider for the provision of stakeholder and dommunity engagement services for Main Roads Western Australia</li>
+                    <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
+                    <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
+                </ul>
+            </div>
+      </main>  
+
+       <div class="jumbotron" id="contact">
+          <h2>Ready to get in touch?</h2><br>
+          <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
+      </div>
+
+      <footer>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
+      </footer>
+
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-<nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Expertise
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="index.html#strategic-plans">Strategic plans</a>
-          <a class="dropdown-item" href="index.html#exec-coaching">Executive coaching</a>
-          <a class="dropdown-item" href="index.html#reporting">Reporting</a>
-          <!-- <div class="dropdown-divider"></div> -->
-          <!-- <a class="dropdown-item" href="#">Something else here</a> -->
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html#about">About</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="case-studies.html">Case studies</a>
-      </li>
-       </li>
-        <li class="nav-item">
-        <a class="nav-link" href="index.html#previous-clients">Previous clients</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="index.html#news">News</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html#contact">Contact</a>
-      </li>
-          </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
-      <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-    </ul>
-  <!--   <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
-  </div>
-</nav>
-
-
 </body>
-
-<footer>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-    </ul>
-</footer>
-
 </html>
