--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link" href="index.html#accordionExample">Case studies</a>
+            <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
            </li>
             <li class="nav-item">
@@ -58,19 +58,14 @@
             <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul>
-      <!--   <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+     
       </div>
     </nav>
 
     <main>
         <section>
             <div class="cushycms">
-                <h5><strong>Solutions</strong></h5>
                 <p>Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>    
-
                 <h3><strong>Expertise</strong></h3>
                 <h5><strong>Solutions</strong></h5>
                 <p>Helen Grzyb and Associates works with government and not for profit organisations to achieve the best possible value in an environment of change.</p>
@@ -183,9 +178,9 @@
             <p>Helen has since been sought after to undertake stakeholder enagement reviews in the City of Melville and in 2019 for the City of Nedlands.</p>
             <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img src="img/Shirely-Strickland-Reserve.jpg"></a>
             <h6 class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</h6>
-
          </div>
-      </div>
+          </div>
+
 
       <div class="card">
         <div class="card-header" id="headingTwo">
@@ -255,6 +250,7 @@
            </div>
         </div>
       </div>
+
         <div class="card">
         <div class="card-header" id="headingFour">
           <h2 class="mb-0">
@@ -301,13 +297,13 @@
             <h2>Ready to get in touch?</h2><br>
             <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
         </div>
-<footer>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
-    </ul>
+    <footer>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
 
-    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a></div>
-</footer>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a></div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
