--- a/expertise.html
+++ b/expertise.html
@@ -5,7 +5,6 @@
      <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -40,7 +39,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link" href="index.html#accordionExample">Case studies</a>
+            <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
            </li>
             <li class="nav-item">
@@ -74,10 +73,10 @@
                 <li>WA public sector operations (Justice, Health, Education)</li>
             </ul>
         </div>
-        <br><br>
+        <br>
 
         <div class="cushycms"></div>
-            <h3>Research and policy review:</h3>
+            <h5><strong>Research and policy review</strong></h5>
 
             <p>We work with expert colleagues to collectively provide a complete suite of research and analysis services. Examples include statistical analysis, stakeholder analysis and engagement, legislative/policy analysis, or national/international benchmark comparisons.
 
@@ -102,9 +101,9 @@
 
             <p>Dr Helen Grzyb's expertise is recognised with her appointment as post-graduate lecturer in stakeholder engagement, and appointments delivering workshops on public sector ethics, influencing skills, and stakeholder engagement.</p>
         </div>
-
+        <br>
         <div id="strategic-plans">
-           <p><strong>Governance advisory</strong>
+           <h5><strong>Governance advisory</strong></h5>
            <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations. Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors. With over 30 years' experience as a community or state government board member she is perfectly positioned to offer governance advisory services. Her experience in governance includes:</p>
 
            <ul>
@@ -117,9 +116,9 @@
                 <li>Vocational education</li>
             </ul>
         </div>
-      
+        <br>    
         <div id="exec-coaching">
-            <p><strong>Executive coaching</strong></p>
+            <h5><strong>Executive coaching</strong></h5>
 
             <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations. Successful coaching assignments have covered sectors such as:<br>The West Australian public sector (Treasury, Small business, Justice)</p>           
         </div>
