content updates; link changes ; headers added to pages

--- a/case-studies.html
+++ b/case-studies.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="case-studies.html#contact">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
@@ -57,7 +57,9 @@
     </nav>
 
   <main>
-            
+    <div class="cushycms">
+    <h3>Case studies</h3>
+    </div>    
 
     <div class="accordion" id="accordionExample">
       <div class="card">
@@ -77,7 +79,7 @@
                     <img class="card-img-top" src="img/gateway.jpg" alt="gateway highway">
                 </a>
 
-                <p class="text-muted">Gateway Vision WA. Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </p>
+                <h7 class="text-muted">Gateway Vision WA. Image source: https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </h7>
 
                 <p> In 2006, Dr Helen Grzyb was part of the original Main Roads WA (MRWA) Value Assurance Review team which tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited MRWA VAR Reviewer. Subsequently Helen went on to undertake a further five reviews for MRWA projects:</p>
 
@@ -99,7 +101,7 @@
 
                 <p>Helen has since been sought after to undertake stakeholder enagement reviews in the City of Melville and in 2019 for the City of Nedlands.</p>
                 <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img src="img/Shirely-Strickland-Reserve.jpg"></a>
-                <h6 class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</h6>
+                <p class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</p>
              </div>
           </div>
 
@@ -112,7 +114,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
               <img class="card-img-top" src="img/cossack_house.jpg">
-              <div class="text-muted">Customs House & Bond Store, Cossack. Image source: Michal Lewi - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43737833</div>
+              <p class="text-muted">Customs House & Bond Store, Cossack. Image source: Michal Lewi - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43737833</p>
 
                     <h5 class="card-title">Cossack 2006-7 – stakeholder engagement</h5>
                     <h6>Project Background</h6>
@@ -133,7 +135,7 @@
                     <p>Palassis Architects engaged Helen Grzyb and Associates to engage with the community and with stakeholders for their input into a masterplan.</p>
 
                     <img alt="Cossack masterplan document" class="card-image" src="img/cossackmasterplan.jpg">
-                    <h6 class="text-muted">: Cossack Master Plan. Image source: Palassis Architects.</h6>
+                    <p class="text-muted"> Cossack Master Plan. Image source: Palassis Architects.</p>
 
                     <p>Our team members were Dr Grzyb, Shontay Cardew, Mary Power. We identified the key audiences including private landowners; ratepayers (currently partly funding the restoration work), archaeological, heritage, and indigenous groups, as well as federal, state and local governments.</p>
 
@@ -151,7 +153,7 @@
             <div class="card-header" id="headingThree">
               <h2 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                 Fremantle Heritage Precinct Master Plan
+                 Fremantle Heritage Precinct Master Plan 2003
                 </button>
               </h2>
             </div>
@@ -192,27 +194,6 @@
             </div>
           </div>
         </div>
-
-            <div id="news" class="cushycms">
-                <h3>News</h3>
-
-                <h5 class="date">February 14, 2020</h5>
-                <h4>Workshops at As We Are</h4>
-                <ul>
-                    <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulson Group.</li>
-                </ul>
-                <h5 class="date">July 3, 2019</h5>
-                <h4>New board role</h4>
-                <ul>
-                    <li>Governing Council Member for South Regional TAFE</li>
-                </ul>
-                <h4>Current panel contracts</h4>
-                <ul>
-                    <li>Approved provider for the provision of stakeholder and dommunity engagement services for Main Roads Western Australia</li>
-                    <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
-                    <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
-                </ul>
-            </div>
       </main>  
 
        <div class="jumbotron" id="contact">
