--- a/expertise.html
+++ b/expertise.html
@@ -50,7 +50,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="expertise.html#contact">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
@@ -60,7 +60,8 @@
       </div>
     </nav>
     <main>
-        <div id="expertise" class="cushycms">
+        <div class="cushycms">
+            <h3>Expertise</h3>
             <h5><strong>Strategic plans</strong></h5>
             <p>We have delivered or been part of a multi disciplinary team for strategic plans in areas such as:</p>
 
