--- a/previous-clients.html
+++ b/previous-clients.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="previous-clients.html#contact">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
@@ -63,7 +63,7 @@
     </nav>
     <main>
 		       
-		<div id="previous-clients">
+		<div class="cushycms">
             <h3>Previous clients</h3>
 
             <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for clients such as:</p>
