--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link" href="index.html#accordionExample">Case studies</a>
+            <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
            </li>
             <li class="nav-item">
@@ -51,7 +51,7 @@
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="about.html#contact">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
