--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     </nav>
 
   <main>
-        <div id="about">
+        <div id="about" class="cushycms">
             <h3>About</h3>
 
             <p>Accredited by government agencies as an policy and research advisor and engagement expert in Western Australia, Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors (and a graduate of the Company Director course), of the Australian Institute of Management, and of the Australian Human Resources Institute.</p>
