added cushycms classes

--- a/expertise.html
+++ b/expertise.html
@@ -103,7 +103,7 @@
             <p>Dr Helen Grzyb's expertise is recognised with her appointment as post-graduate lecturer in stakeholder engagement, and appointments delivering workshops on public sector ethics, influencing skills, and stakeholder engagement.</p>
         </div>
         <br>
-        <div id="strategic-plans">
+        <div id="strategic-plans cushycms">
            <h5><strong>Governance advisory</strong></h5>
            <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations. Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors. With over 30 years' experience as a community or state government board member she is perfectly positioned to offer governance advisory services. Her experience in governance includes:</p>
 
@@ -118,7 +118,7 @@
             </ul>
         </div>
         <br>    
-        <div id="exec-coaching">
+        <div id="exec-coaching cushycms">
             <h5><strong>Executive coaching</strong></h5>
 
             <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations. Successful coaching assignments have covered sectors such as:<br>The West Australian public sector (Treasury, Small business, Justice)</p>           
