--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>We are perfectly positioned to work with you to plan and develop the strategies for contemporary service delivery. We offer expertise in:</p>
             </div>
 
-            <div class="container">
+            <div class="container cushycms">
               <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3">
                      <div class="card">
@@ -148,7 +148,7 @@
             </ul>
             <h4>Current panel contracts</h4>
             <ul>
-                <li>Approved provider for the provision of stakeholder and dommunity engagement services for Main Roads Western Australia</li>
+                <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
                 <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
                 <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
             </ul>
