--- a/expertise.html
+++ b/expertise.html
@@ -76,7 +76,7 @@
         </div>
         <br>
 
-        <div class="cushycms"></div>
+        <div class="cushycms">
             <h5><strong>Research and policy review</strong></h5>
 
             <p>We work with expert colleagues to collectively provide a complete suite of research and analysis services. Examples include statistical analysis, stakeholder analysis and engagement, legislative/policy analysis, or national/international benchmark comparisons.
