--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="container cushycms"><div class="row">
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="website icon" src="./Helen Grzyb &amp; Associates_files/target-1.svg" width="100">
+      <div class="card"><img alt="website icon" src="./img/target-1.svg" width="100">
       <h2>Research and policy review</h2>
 
       <p>Helen can conduct independent reviews and evaluations of policies/programs<strong>.</strong>&nbsp;</p>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./Helen Grzyb &amp; Associates_files/light-bulb.svg" width="100">
+      <div class="card"><img alt="speech bubbles" src="./img/light-bulb.svg" width="100">
       <h2>Strategic planning</h2>
 
       <p>We develop strategic and business plans for organisations seeking to position themselves optimally in the future.</p>
@@ -94,27 +94,28 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./Helen Grzyb &amp; Associates_files/teamwork-4.svg" width="100">
+      <div class="card"><img alt="speech bubbles" src="./img/teamwork-4.svg" width="100">
       <h2>Stakeholder engagement</h2>
-
       <p>With recognised expertise in stakeholder engagement throughout WA, we also provide engagement reviews to identify improvements in this key organisational process.&nbsp;</p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="megaphone" src="./Helen Grzyb &amp; Associates_files/megaphone.svg" width="100">
+      <div class="card"><img alt="megaphone" src="./img/megaphone.svg" width="100">
+      <br>
       <p>We work with you to develop a marketing strategy.</p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="document with pencil" src="./Helen Grzyb &amp; Associates_files/briefing.svg" width="100">
+      <div class="card"><img alt="document with pencil" src="./img/briefing.svg" width="100">
+      <br>
       <p>Helen can review your <strong>non-profit's </strong>constitution so it retains currency in a changing environment.</p>
       </div>
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="earth icon" src="./Helen Grzyb &amp; Associates_files/working.svg" width="100">
+      <div class="card"><img alt="earth icon" src="./img/working.svg" width="100">
       <h2>Governance advisory</h2>
 
       <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations.</p>
@@ -122,7 +123,7 @@
       </div>
 
       <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card"><img alt="speech bubbles" src="./Helen Grzyb &amp; Associates_files/shake-hands.svg" width="100">
+      <div class="card"><img alt="speech bubbles" src="./img/shake-hands.svg" width="100">
       <h2>Executive coaching</h2>
 
       <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations.</p>
